--- a/Basic Java Class 13/DynamicWebJV13/src/message_vi_VN.properties
+++ b/Basic Java Class 13/DynamicWebJV13/src/message_vi_VN.properties
@@ -3,3 +3,5 @@
 customer.title.cusList = Danh S\u00E1ch Kh\u00E1ch H\u00E0ng
 
 home.title = Trang ch\u1EE7
+
+userinfor.title.header = Nh\u1EADp th\u00F4ng tin ng\u01B0\u1EDDi d\u00F9ng
